--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "repository": "https://github.com/ireneea/web-serial-utils",
   "author": "ireneea <irenee.ajeneza@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
+  }
 }
